# insurance-enrollment-prediction

./: .dockerignore  .gitignore  ASSIGNMENT.md  Dockerfile  README.md  pyproject.toml  report.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/: eda_summary.json  metrics.json
data/: employee_data.csv
src/: __init__.py  api.py  config.py  data.py  eda.py  evaluate.py  preprocess.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_evaluate.py  test_preprocess.py
