[project]
name = "insurance-enrollment"
version = "1.0.0"
description = "ML pipeline predicting voluntary insurance enrollment from employee data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.5.0",
    "scikit-learn==1.9.0",
    "joblib==1.5.3",
    "matplotlib==3.11.0",
    "mlflow==3.14.0",
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "httpx==0.28.1", "ruff==0.15.20"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B)
select = ["E", "W", "F", "I", "UP", "B"]
